fix: sliver sponsor image size is too large

--- a/src/assets/scss/sponsors.scss
+++ b/src/assets/scss/sponsors.scss
@@ -58,7 +58,7 @@
 .sponsors.sponsors--silver {
     picture,
     img {
-        max-height: 8rem;
+        max-height: 4rem;
     }
 }
 
